# geobacter

./: .gitignore  BUILD.md  CODING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install-driver.sh
amd-comgr/: Cargo.toml
amd-comgr-sys/: Cargo.toml
amd-comgr-sys/src/: build.rs  lib.rs  wrapper.h
amd-comgr/src/: action.rs  data.rs  error.rs  isa.rs  lib.rs  metadata.rs  set.rs
amdgpu-std/: Cargo.toml
amdgpu-std/src/: dpp.rs  lib.rs  sync.rs  workitem.rs
bootstrap-rustc-driver/: Cargo.toml
bootstrap-rustc-driver/src/: main.rs
compiletime/: Cargo.toml
compiletime/src/: lib.rs
examples/amdgpu/fractal/: Cargo.toml  README.md  main.rs
examples/amdgpu/gemm/: Cargo.toml  README.md  main.rs
examples/amdgpu/mut-slice-ub/: Cargo.toml
examples/amdgpu/trivial/: Cargo.toml
examples/fractal/: Cargo.toml
examples/fractal/src/: main.rs
examples/fwd-conv/: Cargo.toml
examples/fwd-conv/src/: main.rs
examples/mat-mat-mul/: Cargo.toml
examples/mat-mat-mul/src/: main.rs
examples/mut-slice-ub/: Cargo.toml
examples/mut-slice-ub/src/: main.rs
examples/ndarray/: Cargo.toml
examples/ndarray/src/: main.rs
examples/trivial/: Cargo.toml
examples/trivial/src/: main.rs
examples/vk/fractal/: Cargo.toml
geobacter-core/: Cargo.toml
geobacter-core/src/: intrinsics.rs  kernel.rs  lib.rs  macros.rs  param.rs  platform.rs  ptr.rs  ref_.rs  slice.rs
hsa-core/: Cargo.toml
hsa-core-gen/: Cargo.toml
hsa-core-gen/src/: lib.rs
hsa-core/src/: intrinsics.rs  kernel.rs  kernel_info.rs  lib.rs  macros.rs  panicking.rs  platform.rs  ptr.rs  ref_.rs  slice.rs  traits.rs  unit.rs
hsa-core/src/marker/: mem.rs  mod.rs
hsa-rt/: Cargo.toml
hsa-rt-sys/: Cargo.toml
hsa-rt-sys/src/: build.rs
hsa-rt-sys/src/lib/: lib.rs  wrapper.hpp
hsa-rt/src/: agent.rs  alloc.rs  code_object.rs  error.rs  executable.rs  lib.rs  queue.rs  signal.rs  utils.rs
hsa-rt/src/ext/: amd.rs  mod.rs  queue.rs  signal.rs
hsa-rt/src/ext/image/: access.rs  addressing_mode.rs  channel_order.rs  channel_type.rs  coord_mode.rs  filter_mode.rs  format.rs  geometry.rs  layout.rs  mod.rs
hsa-rt/src/mem/: alloc.rs  mod.rs  region.rs  region_alloc.rs
indexvec/: Cargo.toml
indexvec/src/: lib.rs
ir/: Cargo.toml
ir-gen/: Cargo.toml
ir-gen/src/: lib.rs
ir/src/: builder.rs  lib.rs  rustc_wrappers.rs  tys.rs  utils.rs
kernel/: Cargo.toml
kernel/src/: global_mem.rs  lib.rs
legionella-amdgpu-std/: Cargo.toml
legionella-amdgpu-std/src/: lib.rs  sync.rs  workitem.rs
legionella-core/: Cargo.toml
legionella-core/src/: lib.rs  ss.rs
legionella-intrinsics/: Cargo.toml
legionella-intrinsics/src/: attrs.rs  collector.rs  intrinsics.rs  lib.rs  stubbing.rs
legionella-intrinsics/src/intrinsics/: mod.rs  shader.rs  vk.rs
legionella-std/: Cargo.toml
legionella-std/src/: kernel.rs  lib.rs  shader.rs  spirv_help.rs  vk_help.rs  workitem.rs
legionella-std/src/mem/: buffer.rs  mod.rs  ref_.rs  slice.rs
legionella-std/src/mem/image/: mod.rs
legionella-vk-core/: Cargo.toml
legionella-vk-core/src/: lib.rs
legionella-vk-std/: Cargo.toml
legionella-vk-std/src/: lib.rs  shader.rs  vk_help.rs
recycled-arc-vec/: Cargo.toml
recycled-arc-vec/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime-amd/: Cargo.toml
runtime-amd-macros/: Cargo.toml
runtime-amd-macros/src/: lib.rs
runtime-amd/src/: alloc.rs  async_copy.rs  boxed.rs  codegen.rs  error.rs  lds.rs  lib.rs  mem.rs  module.rs  signal.rs
runtime-core/: Cargo.toml  build.rs
runtime-core/src/: context.rs  error.rs  lib.rs  metadata.rs  module.rs  serde_utils.rs
runtime-core/src/accelerators/: host.rs  mod.rs  vk.rs
runtime-core/src/codegen/: attrs.rs  help.rs  mod.rs  products.rs  stubbing.rs
runtime-core/src/codegen/worker/: collector.rs  driver_data.rs  error.rs  mod.rs  util.rs
runtime-core/src/passes/: alloc.rs  compiler_builtins.rs  lang_item.rs  mod.rs  panic.rs
runtime-core/src/platform/: mod.rs  unix.rs
runtime-core/src/utils/: env.rs  mod.rs  test.rs
runtime-nv/: Cargo.toml
runtime-nv/src/: lib.rs
runtime-vk/: Cargo.toml
runtime-vk/src/: codegen.rs  error.rs  lib.rs  module.rs  serde_utils.rs
runtime-vk/src/codegen/: attrs.rs  mod.rs
runtime/src/: context.rs  hsa.rs  lib.rs  metadata.rs  module.rs  serde_utils.rs  util.rs
runtime/src/accelerators/: amd.rs  host.rs  mod.rs
runtime/src/codegen/: mod.rs  products.rs
runtime/src/codegen/worker/: collector.rs  driver_data.rs  error.rs  mod.rs  tls.rs
runtime/src/passes/: alloc.rs  compiler_builtins.rs  lang_item.rs  mod.rs  panic.rs
runtime/src/platform/: unix.rs
runtime/src/trans/: mod.rs  target_options.rs
runtime/src/trans/worker/: mod.rs  tls.rs
runtime/src/utils/: git.rs  mod.rs
rust-builder/: Cargo.toml
rust-builder/src/: build.rs  git.rs  main.rs
rustc-driver/: Cargo.toml
rustc-driver-base/: Cargo.toml
rustc-driver-base/src/: driver.rs  lib.rs  queries.rs  util.rs
rustc-driver/src/: bootstrap-main.rs  full-main.rs  lib.rs  main.rs
rustc-help/: Cargo.toml
rustc-help/src/: codec.rs  driver_data.rs  lib.rs  stubbing.rs
rustc-help/src/intrinsics/: call_by_type.rs  current_platform.rs  mod.rs  specialization_param.rs  work_item_kill.rs
rustc-intrinsics/: Cargo.toml
rustc-intrinsics/src/: codec.rs  driver.rs  help.rs  interface.rs  lib.rs  passes.rs  proc_macro_decls.rs  queries.rs  util.rs
rustc-plugin/: Cargo.toml
rustc-plugin/src/: debug.rs  kernel_info.rs  lib.rs
rustc-plugin/src/context/: init.rs  mod.rs
shared-defs/: Cargo.toml  kernel.rs  lib.rs  platform.rs
shared-intrinsics/amdgpu/: Cargo.toml
shared-intrinsics/amdgpu/src/: attrs.rs  dpp.rs  lib.rs
shared-intrinsics/common/: Cargo.toml
shared-intrinsics/common/src/: attrs.rs  collector.rs  hash.rs  lib.rs  platform.rs  stubbing.rs
shared-intrinsics/common/src/intrinsics/: mod.rs  work_item_kill.rs
shared-intrinsics/vk/: Cargo.toml
tools/hsa-agent-info/: Cargo.toml
vk-core/: Cargo.toml
vk-core/src/: lib.rs  ss.rs
vk-std/: Cargo.toml
vk-std/src/: kernel.rs  lib.rs  shader.rs  vk_help.rs
(+46 files in other folders)
