
[workspace]
members = ["hsa-core-gen", "geobacter-core",
           "runtime-core", "shared-defs",

           "rustc-driver-base", "rustc-help",
           "bootstrap-rustc-driver", "rustc-driver",
           "rust-builder",

           "shared-intrinsics/common", "shared-intrinsics/vk",
           "shared-intrinsics/amdgpu",
           # TODO
           # "shared-intrinsics/nv",

           "vk-core", "vk-std", "runtime-vk",
           "examples/vk/trivial", "examples/vk/fractal",

           "amd-comgr-sys", "amd-comgr",
           "hsa-rt-sys", "hsa-rt",
           "tools/hsa-agent-info",
           "amdgpu-std", "runtime-amd",
           "runtime-amd-macros",
           "examples/amdgpu/trivial", "examples/amdgpu/fractal",
           "examples/amdgpu/mut-slice-ub",

           "runtime-nv",

           # Tests here
           "tests/driver/run-pass/generic-substs"
           ]

[profile.release]
debug = true
debug-assertions = true
rpath = true

[profile.dev]
rpath = true
[profile.test]
rpath = true
[profile.bench]
rpath = true

[patch.crates-io]
hsa-rt-sys = { path = "hsa-rt-sys" }
hsa-rt = { path = "hsa-rt" }
geobacter-shared-defs = { path = "shared-defs" }
geobacter-core = { path = "geobacter-core" }
geobacter-rustc-help = { path = "rustc-help" }
geobacter-vk-core = { path = "vk-core" }
