
[workspace]
members = ["runtime-core",
           "rust-builder",

           "runtime-vk",
           "examples/vk/trivial-compute", "examples/vk/fractal",

           "amd-comgr-sys", "amd-comgr",
           "hsa-rt-sys", "hsa-rt",
           "tools/hsa-agent-info",
           "runtime-amd", "runtime-amd-macros",
           "examples/amdgpu/trivial", "examples/amdgpu/fractal",
           "examples/amdgpu/gemm",

           "runtime-nv", ]

[profile.release]
debug = true
debug-assertions = true

[profile.dev]
rpath = true
[profile.test]
rpath = true
[profile.bench]
rpath = true

[patch.crates-io]
amd-comgr-sys = { path = "amd-comgr-sys" }
amd-comgr = { path = "amd-comgr" }
hsa-rt-sys = { path = "hsa-rt-sys" }
hsa-rt = { path = "hsa-rt" }
geobacter-runtime-core = { path = "runtime-core" }
geobacter-runtime-amd-macros = { path = "runtime-amd-macros" }
geobacter-runtime-amd = { path = "runtime-amd" }
geobacter-runtime-nv = { path = "runtime-nv" }
geobacter-runtime-vk = { path = "runtime-vk" }
alloc-wg = { git = "https://github.com/geobacter-rs/alloc-wg.git" }
vulkano = { path = "../vulkano/vulkano" }
