[package]
name = "amd-comgr-sys"
version = "1.0.0"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
edition = "2018"
license = "MIT / Apache-2.0"
build = "src/build.rs"
repository = "https://github.com/geobacter-rs/geobacter/tree/master/amd-comgr-sys"
description = "AMD comgr FFI bindings. Part of the Geobacter project."

[build-dependencies]
bindgen = "0.51.1"
