[package]
name = "amd-comgr"
version = "1.0.0"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
edition = "2018"
license = "MIT / Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amd-comgr-sys = { version = "1.0.0", path = "../amd-comgr-sys" }
