[package]
name = "amd-comgr"
version = "1.0.0"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
edition = "2018"
license = "MIT / Apache-2.0"
repository = "https://github.com/geobacter-rs/geobacter/tree/master/amd-comgr"
description = "Rust wrapper for AMD comgr. Part of the Geobacter project."

[dependencies]
amd-comgr-sys = "1.0.0"
