[package]
name = "geobacter-amd-std"
version = "1.0.0"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
edition = "2018"
license = "MIT / Apache-2.0"
repository = "https://github.com/geobacter-rs/geobacter/tree/master/amdgpu-std"
description = "Geobacter core crate for AMDGPU. Requires the Geobacter Rust compiler."

[dependencies]
geobacter-core = "1.0.0"
hsa-rt = "0.1.0"
