[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
name = "hsa-core"
version = "0.1.0"

[dependencies]
serde = "0.9.13"
serde_derive = "0.9.13"

[dependencies.hsa-core-gen]
optional = false
path = "../hsa-core-gen"

[dev-dependencies]

#[dependencies.hsa-rustc-plugin]
#optional = false
#path = "../rustc-plugin"
