[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
name = "hsa-core"
version = "0.1.0"

[lib]
crate-type = ["dylib"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"

[dependencies.hsa-core-gen]
optional = false
path = "../hsa-core-gen"

[dev-dependencies]

[dependencies.hsa-rustc-plugin]
optional = false
path = "../rustc-plugin"
