[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
name = "hsa-rt"
version = "0.1.0"
license = "MIT / Apache-2.0"
repository = "https://github.com/geobacter-rs/geobacter/tree/master/hsa-rt"
description = "Rust wrapper for HSA. Part of the Geobacter project."

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
log = "0.4.7"
hsa-rt-sys = "0.1.0"
