[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
name = "indexvec"
version = "0.1.0"

[dependencies.serde]
optional = true
version = "1.0"

[dependencies.serde_derive]
optional = true
version = "1.0"

[features]
default = ["serial"]
serial = [
    "serde_derive",
    "serde",
]
