[package]
name = "legionella-amdgpu-std"
version = "0.1.0"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hsa-core = { path = "../hsa-core" }
hsa-rt = { path = "../hsa-rt" }
