[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
license = "MIT / Apache-2.0"
name = "legionella-std"
version = "0.1.0"

[dependencies]
ndarray = "0.10.12"
log = "=0.4.4"
legionella-core = { path = "../legionella-core" }
vulkano = "0.11.1"

[dependencies.hsa-core]
path = "../hsa-core"
