[package]
name = "geobacter-runtime-amd-macros"
version = "1.0.0"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
edition = "2018"
license = "MIT / Apache-2.0"
description = "Geobacter AMDGPU specific derive macros."
repository = "https://github.com/geobacter-rs/geobacter/tree/master/runtime-amd-macros"

[lib]
name = "geobacter_runtime_amd_macros"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
