[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
license = "MIT / Apache-2.0"
name = "legionella-runtime-core"
version = "0.1.0"
edition = "2018"

[dependencies]
dirs = "1.0.4"
flate2 = "1.0.1"
goblin = "0.0.23"
indexed_vec = "1.1.0"
log = "0.4.7"
seahash = "3.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.5"
tempfile = "3"
owning_ref = "0.4.0"
crossbeam = "0.7.0"
any_key = "0.1.1"
erased-serde = "0.3.9"
legionella-shared-defs = { path = "../shared-defs" }
parking_lot = "0.9.0"
memmap = "0.7.0"

[dependencies.hsa-core]
path = "../hsa-core"

[dependencies.legionella-intrinsics-common]
path = "../shared-intrinsics/common"
