[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
license = "MIT / Apache-2.0"
name = "geobacter-runtime-core"
version = "1.0.0"
edition = "2018"
description = "Geobacter platform runtime shared code. Requires the Geobacter Rust compiler to build."
repository = "https://github.com/geobacter-rs/geobacter/tree/master/runtime-core"

[dependencies]
snap = "1"
goblin = "0.2.1"
indexed_vec = "1.2.1"
tracing = "0.1"
seahash = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"
owning_ref = "0.4.0"
crossbeam-utils = "0.7.0"
any_key = "0.1.1"
erased-serde = "0.3.9"
parking_lot = "0.11.0"
memmap = "0.7.0"
num-traits = "0.2.11"
lazy_static = "1.4.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.92"
