[package]
name = "geobacter-runtime-nv"
version = "0.1.0"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
license = "MIT / Apache-2.0"
edition = "2018"
description = "Geobacter Nvidia/CUDA runtime. Non-functional ATM."
repository = "https://github.com/geobacter-rs/geobacter/tree/master/runtime-nv"

[dependencies]
geobacter-runtime-core = "1.0.0"
