[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
license = "MIT / Apache-2.0"
edition = "2018"
name = "geobacter-runtime-vk"
version = "0.1.0"

[dependencies]
vulkano = "0.16.0"
geobacter-intrinsics-common = { path = "../shared-intrinsics/common" }
geobacter-runtime-core = { path = "../runtime-core" }
