[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
license = "MIT / Apache-2.0"
edition = "2018"
name = "geobacter-runtime-vk"
version = "0.1.0"
description = "Geobacter Vulkan runtime. Non-functional ATM."
repository = "https://github.com/geobacter-rs/geobacter/tree/master/runtime-vk"

[dependencies]
vulkano = "0.16.0"
geobacter-intrinsics-common = "1.0.0"
geobacter-runtime-core = "1.0.0"
