[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
license = "MIT / Apache-2.0"
edition = "2018"
name = "geobacter-runtime-vk"
version = "0.1.0"
description = "Geobacter Vulkan runtime. Non-functional ATM."
repository = "https://github.com/geobacter-rs/geobacter/tree/master/runtime-vk"

[dependencies]
grt_core = { version = "1.0.0", package = "geobacter-runtime-core" }
vk = { version = "0.19.0", package = "vulkano" }
smallvec = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.8"
any_key = "0.1.1"
