[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
name = "runtime"
version = "0.1.0"
[dependencies]
flate2 = "1.0.1"
goblin = "0.0.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.5"
tempdir = "0.3.6"

[dependencies.hsa-core]
path = "../hsa-core"

[dependencies.hsa-rt]
path = "../hsa-rt"

[dependencies.hsa-rt-sys]
path = "../hsa-rt-sys"

[dependencies.hsa-rustc-plugin]
optional = false
path = "../rustc-plugin"

[dependencies.indexvec]
path = "../indexvec"
