[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
name = "runtime"
version = "0.1.0"

[dependencies]
dirs = "1.0.4"
flate2 = "1.0.1"
fs2 = "0.4.3"
git2 = "0.7.5"
goblin = "0.0.15"
indexed_vec = "1.1.0"
log = "=0.4.4"
num_cpus = "1.8.0"
seahash = "3.0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.5"
tempdir = "0.3.6"
ndarray = "0.10.12"

[dependencies.hsa-core]
path = "../hsa-core"

[dependencies.hsa-rt]
path = "../hsa-rt"

[dependencies.hsa-rt-sys]
path = "../hsa-rt-sys"

[dependencies.legionella-intrinsics]
path = "../legionella-intrinsics"
