[package]
name = "rust-builder"
version = "0.1.0"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
edition = "2018"
description = "Builds the Geobacter Rust toolchain"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
which = "2.0.1"
git2 = "0.16.1"
