[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
license = "MIT / Apache-2.0"
autobins = true
edition = "2018"
name = "legionella-rustc-driver"
version = "0.1.0"

[dependencies]
legionella-intrinsics-common = { path = "../shared-intrinsics/common" }
legionella-amdgpu-intrinsics = { path = "../shared-intrinsics/amdgpu" }
legionella-vk-intrinsics = { path = "../shared-intrinsics/vk" }
rustc-intrinsics = { path = "../rustc-intrinsics" }

[dependencies.hsa-core]
path = "../hsa-core"

