[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
license = "MIT / Apache-2.0"
autobins = true
edition = "2018"
name = "geobacter-rustc-driver"
version = "0.1.0"

[dependencies]
geobacter-amdgpu-intrinsics = { path = "../shared-intrinsics/amdgpu" }
geobacter-core = { path = "../geobacter-core" }
geobacter-intrinsics-common = { path = "../shared-intrinsics/common" }
geobacter-vk-intrinsics = { path = "../shared-intrinsics/vk" }
rustc-intrinsics = { path = "../rustc-intrinsics" }
