[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
license = "MIT / Apache-2.0"
autobins = true
edition = "2018"
name = "geobacter-rustc-driver"
version = "0.1.0"

[dependencies]
geobacter-amdgpu-intrinsics = "1.0.0"
geobacter-core = "1.0.0"
geobacter-intrinsics-common = "1.0.0"
geobacter-vk-intrinsics = "1.0.0"
geobacter-rustc-driver-base = { path = "../rustc-driver-base" }
