[package]
name = "geobacter-shared-defs"
version = "1.0.0"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
edition = "2018"
license = "MIT / Apache-2.0"
repository = "https://github.com/geobacter-rs/geobacter/tree/master/shared-defs"
description = "Some shared definitions used by the bootstrap compiler and geobacter-core. Part of the Geobacter project."

[lib]
path = "lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
