[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
edition = "2018"
name = "mut-slice-ub"
version = "0.1.0"

[dependencies]
env_logger = "0.5.5"
log = "=0.4.4"

[dependencies.hsa-rt]
path = "../../hsa-rt"

[dependencies.hsa-rt-sys]
path = "../../hsa-rt-sys"

[dependencies.runtime]
path = "../../runtime"

[dependencies.legionella-std]
path = "../../legionella-std"
