[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
edition = "2018"
name = "ndarray"
version = "0.1.0"

[dependencies]
env_logger = "0.5.5"
log = "=0.4.4"
ndarray = "0.10.12"
rand = "0.5.5"

[dependencies.hsa-core]
path = "../../hsa-core"

[dependencies.hsa-rt]
path = "../../hsa-rt"

[dependencies.hsa-rt-sys]
path = "../../hsa-rt-sys"

[dependencies.runtime-core]
path = "../../runtime-core"

[dependencies.legionella-std]
path = "../../legionella-std"
