[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
license = "MIT / Apache-2.0"
name = "trivial"
version = "0.1.0"

[dependencies]
runtime-core = { path = "../../runtime-core" }
legionella-std = { path = "../../legionella-std" }
vulkano = "0.11.1"
env_logger = "0.6.0"
log = "=0.4.4"

[dependencies.hsa-core]
path = "../../hsa-core"
