[package]
name = "geobacter-amdgpu-intrinsics"
version = "0.1.0"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geobacter-core = { path = "../../geobacter-core" }
geobacter-intrinsics-common = { path = "../common" }
geobacter-rustc-help = { path = "../../rustc-help" }
