[package]
name = "geobacter-amdgpu-intrinsics"
version = "1.0.0"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
edition = "2018"
license = "MIT / Apache-2.0"
description = "Geobacter driver/runtime internal shared code. Do not use."
repository = "https://github.com/geobacter-rs/geobacter/tree/master/shared-intrinsics/amdgpu"

[dependencies]
geobacter-core = "1.0.0"
geobacter-intrinsics-common = "1.0.0"
geobacter-rustc-help = "1.0.0"
