[package]
name = "geobacter-intrinsics-common"
version = "0.1.0"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.6"
log = "0.4.7"
seahash = "3.0.6"
geobacter-core = { path = "../../geobacter-core" }
rustc-intrinsics = { path = "../../rustc-intrinsics" }
