[package]
name = "geobacter-intrinsics-common"
version = "1.0.0"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
edition = "2018"
license = "MIT / Apache-2.0"
description = "Geobacter driver internal shared code. Do not use."
repository = "https://github.com/geobacter-rs/geobacter/tree/master/shared-intrinsics/common"

[dependencies]
num-traits = "0.2.6"
log = "0.4.7"
seahash = "3.0.6"
geobacter-core = "1.0.0"
geobacter-rustc-help = "1.0.0"
